Switch Maven Central publishing to the Central Portal
Signed-off-by: Ken Shackleton <kshackleton1@bloomberg.net>